packages/frontend/tests/type_errors/cant_instantiate_function_ref.nemo
fn id|a|(x : a) -> a {
  x
}

fn main() -> i32 {
  let my_id = id;
  my_id|i32|(10)
}
